# LRS-FEI

./: README.md  konzola.txt
workspace/install/: local_setup.sh  setup.sh
workspace/install/template_drone_control/lib/template_drone_control/: template_drone_control_node
workspace/install/template_drone_control/share/template_drone_control/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
workspace/log/: latest_build
workspace/src/install/: local_setup.sh  setup.sh
workspace/src/install/template_drone_control/lib/template_drone_control/: template_drone_control_node
workspace/src/install/template_drone_control/share/ament_index/resource_index/package_run_dependencies/: template_drone_control
workspace/src/install/template_drone_control/share/template_drone_control/: local_setup.sh  package.sh
workspace/src/log/: latest_build
workspace/src/template_drone_control/: CMakeLists.txt
workspace/src/template_drone_control/src/: file.csv  mission_1_all.csv  template_drone_control_nod_orig.cpp  template_drone_control_node copy.cpp  template_drone_control_node.cpp  test.cpp
workspace/src/template_drone_control/src/install/: local_setup.sh  setup.sh
workspace/src/template_drone_control/src/log/: latest_build
